# snippets

./: .gitignore  README.md
sd_event_loop/: CMakeLists.txt  Makefile  README.md  event_loop.cc
signal_handling/: README.md  signal_handler.cc
signal_handling/.ccls-cache/@@home@kristoffer@Code@cpp@hkod/: @home@kristoffer@tools@llvm@clang+llvm-7.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@7.0.1@include@__stddef_max_align_t.h.blob  @home@kristoffer@tools@llvm@clang+llvm-7.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@7.0.1@include@stdarg.h.blob  @home@kristoffer@tools@llvm@clang+llvm-7.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@7.0.1@include@stddef.h.blob  @home@kristoffer@tools@llvm@clang+llvm-7.0.1-x86_64-linux-gnu-ubuntu-16.04@lib@clang@7.0.1@include@stdint.h.blob  @usr@include@_G_config.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@7@backward@binders.h.blob  @usr@include@c++@7@bits@alloc_traits.h.blob  @usr@include@c++@7@bits@allocator.h.blob  @usr@include@c++@7@bits@basic_ios.h.blob  @usr@include@c++@7@bits@basic_ios.tcc.blob  @usr@include@c++@7@bits@basic_string.h.blob  @usr@include@c++@7@bits@basic_string.tcc.blob  @usr@include@c++@7@bits@char_traits.h.blob  @usr@include@c++@7@bits@concept_check.h.blob  @usr@include@c++@7@bits@cpp_type_traits.h.blob  @usr@include@c++@7@bits@cxxabi_forced.h.blob  @usr@include@c++@7@bits@cxxabi_init_exception.h.blob  @usr@include@c++@7@bits@exception.h.blob  @usr@include@c++@7@bits@exception_defines.h.blob  @usr@include@c++@7@bits@ios_base.h.blob  (+124 more)
(+2 files in other folders)
